# tippers-services

./: .env.example  .gitignore  DataWhisk_Requirements_Spec_v2.md  LICENSE  README.md  docker-compose.yml  download_mlflow_models.py  mflow_run.ipynb  occupancy_data_for_spaceid.py  occupancy_predictions.ipynb  output_3144_clwa_4231.csv  putting_into_occupancy.py  pyproject.toml
MLFlow_testserver/: mlflow_run.py
api/: Dockerfile  dagster_client.py  deps.py  main.py  mlflow_utils.py  requirements.txt  schemas.py
api/routes/: export.py  ingest.py  mapping.py  models.py  occupancy.py  optimizer.py  (+4 more)
by_room_data/: output_3141_clwa_1200.csv  output_3141_clwa_1500.csv  output_3141_clwa_1600.csv  output_3141_clwb_1200.csv  output_3141_clwb_1300.csv  output_3141_clwb_1600.csv  output_3141_clwe_1100.csv  output_3142_clwa_2019.csv  output_3142_clwa_2065.csv  output_3142_clwa_2209.csv  output_3143_clwa_3219.csv  output_3145_clwa_5059.csv  output_3146_clwa_6131.csv  output_3146_clwa_6219.csv
claudedocs/: design_datawhisk_occupancy_phase1_2026-04-15.md  research_datawhisk_stack_2026-04-15.md
docs/: adding-a-dagster-asset.md  adding-a-table.md  adding-an-endpoint.md  api-reference.md  architecture.md  database-schema.md  frontend.md
orchestration/: Dockerfile  dagster.yaml  definitions.py  mlflow_utils.py  requirements.txt  resources.py  workspace.yaml
shared/: pyproject.toml
shared/datawhisk_shared/: __init__.py  base.py  database.py  mapping.py  models.py  orm.py  session.py
tests/: conftest.py
ui/: .gitignore  index.html  nginx.conf  package-lock.json  package.json
(+119 files in other folders)
