[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datawhisk-shared"
version = "0.1.0"
description = "Framework-free shared utilities for DataWhisk services."
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pydantic>=2.10",
]

[tool.setuptools.packages.find]
include = ["datawhisk_shared*"]
